# reak_state_data_project

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
connection/: gcp_connection.py
pipeline/: flow.py
pipeline/extract/: base_scraper.py  chavesnamao_scraper.py  imovelweb_scraper.py  olx_scraper.py  vivareal_scraper.py  zapimoveis_scraper.py
util/: browser.py  logger.py
