[tool.poetry]
name = "real-state-data-project"
version = "1.0.0"
description = ""
authors = ["Luiz Eduardo Malanczyn de Oliveira <oliveiraluiz.com@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
pandas = "^2.2.3"
google-cloud-bigquery = "^3.31.0"
prefect = "^3.3.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
